Alterações index html

--- a/disciplina.html
+++ b/disciplina.html
@@ -13,5 +13,6 @@
 
         <h2>Objetivo</h2>
         <p>Possibilitar aos alunos a utilização otimizada de sistemas para versionamento e gestão de dependências para desenvolvimento, enfatizando o trabalho em equipe com utilização das tecnologias disponíveis</p>
+        <a href="lucas/Martins.html">Aluno Lucas Martins</a>
 </body>
 </html>
