--- a/disciplina.html
+++ b/disciplina.html
@@ -13,8 +13,8 @@
 
         <h2>Objetivo</h2>
         <p>Possibilitar aos alunos a utilização otimizada de sistemas para versionamento e gestão de dependências para desenvolvimento, enfatizando o trabalho em equipe com utilização das tecnologias disponíveis</p>
-        <a href="lucas.html">Aluno Lucas Martins</a>
-        <a href="pedro.html">Aluno Pedra Petterina</a>
+        <a href="lucas.html">Aluno Lucas CALVO Martins</a>
+        <a href="pedro.html">Aluno Pedro Petterini</a>
         <a href="sander.html">Aluno Sander</a>
 </body>
 </html>
