Alterações index lucas

--- a/lucas.html
+++ b/lucas.html
@@ -14,5 +14,6 @@
         <li><strong>Curso:</strong>Analise e Desenvolvimento de Sistemas</li>
         <li><strong>Turma:</strong>ADS19</li>
     </ul>
+    <img src="img/imgperfil.jpg" alt="">
 </body>
 </html>
